[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/AlienParent.gd" type="Script" id=1]
[ext_resource path="res://Scenes/alien.fbx" type="PackedScene" id=2]
[ext_resource path="res://HealthBarEnemies.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 2.0
height = 2.4

[node name="AlienParent" type="KinematicBody" groups=[
"alien",
]]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
script = ExtResource( 1 )

[node name="alien" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.75, 0 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 50, 6, 50, -6 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
transform = Transform( 2.25, 0, 0, 0, 2.25, -9.59234e-14, 0, 9.59234e-14, 2.25, 0, 5.24521, 0 )

[node name="ProjectileSpawnPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.99863, -0.052336, 0, 0.052336, 0.99863, 2.761, 1.25, 1.25 )

[node name="ProjectileCooldown" type="Timer" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="ProjectileCooldown" to="." method="_on_ProjectileCooldown_timeout"]
